--- a/src/app/editor/editor.component.sass
+++ b/src/app/editor/editor.component.sass
@@ -17,12 +17,8 @@
         user-select: none
         mat-form-field
           &.markdown mat-label::after
-            background-image: url('https://unpkg.com/simple-icons@latest/icons/markdown.svg')
-            display: inline-block
-            width: 1em
-            height: 1em
-            margin-left: 0.2em
-            content: ''
+            font-family: 'iconfont'
+            content: ' \00e6d1'
           display: block
           margin: 18px
 
