--- a/src/styles.sass
+++ b/src/styles.sass
@@ -26,6 +26,8 @@ $candy-app-theme: mat-light-theme($candy-app-primary, $candy-app-accent, $candy-
 
 @import '~material-design-icons/iconfont/material-icons.css'
 
+@import 'iconfont.css'
+
 html
   font-family: "Noto Sans", Arial, Helvetica, "Noto Sans CJK SC", "Microsoft Yahei UI", sans-serif 
 a
