--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar color="accent" role="heading" class="mat-elevation-z8">
-  <a id="title" [routerLink]="['/']">{{title}}</a>
+  <a id="title" [routerLink]="['/']">EhTag Editor</a>
   <span style="flex: 1 1 auto;"></span>
   <app-user></app-user>
 </mat-toolbar>
