--- a/src/app/editor/editor.component.sass
+++ b/src/app/editor/editor.component.sass
@@ -4,10 +4,10 @@
   header
     display: flex
     user-select: none
-    margin: 18px 18px 0 18px
+    margin: 18px 12px 0
     font-size: 24px
-    button
-      margin: 6px
+    > *
+      margin: auto 6px
   section
     position: relative
     display: flex
