--- a/src/app/editor/editor.component.html
+++ b/src/app/editor/editor.component.html
@@ -11,7 +11,7 @@
           <mat-spinner class="loading" [diameter]="24"></mat-spinner>
         </ng-template>
       </button>
-      <button mat-raised-button [disabled]="(tagForm.invalid && tagForm.touched) || !(github.tokenChange | async)"
+      <button mat-raised-button [disabled]="!(canSubmit | async)"
         [matTooltip]="tagForm.invalid ? '请检查填写的内容' : !(github.tokenChange | async) ? '请先登录' : '' " (click)="submit()"
         color="accent">
         <ng-container *ngIf="!(submitting | async); else submittingspinner">提交</ng-container>
