--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -38,7 +38,7 @@
       (matSortChange)="navigateParam({ sortBy: $event.active, sortDirection: $event.direction })">
       <!-- Id Column -->
       <ng-container matColumnDef="raw">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header class="text">原始</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header class="text">原始标签</th>
         <td mat-cell *matCellDef="let row">
           <div>
             <a *ngIf="row.namespace === 'rows'; else notRow;" (click)="setNs(row.raw)"
@@ -74,7 +74,7 @@
       </ng-container>
 
       <ng-container matColumnDef="links">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header class="text">链接</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header class="text">外部链接</th>
         <td mat-cell *matCellDef="let row">
           <div [innerHTML]="row.renderedLinks | mark: (search | async): true"></div>
         </td>
