--- a/src/app/list/list.component.sass
+++ b/src/app/list/list.component.sass
@@ -27,6 +27,8 @@ section#table-wrapper
       min-width: 80px
     .mat-header-cell:not(:last-child), .mat-cell:not(:last-child)
       padding-right: 8px
+    td div
+      margin: 4px 0
 
   div.spinner
     user-select: none
