--- a/src/app/editor/editor.component.html
+++ b/src/app/editor/editor.component.html
@@ -87,20 +87,20 @@
             <mat-card-subtitle>名称
               <mat-spinner *ngIf="rendered.loading | async" class="loading" [diameter]="14"></mat-spinner>
             </mat-card-subtitle>
-            <mat-card-content [innerHtml]="rendered.name | async | mark: '': true"></mat-card-content>
+            <mat-card-content class="md-container" [innerHtml]="rendered.name | async | mark: '': true"></mat-card-content>
           </mat-card>
         </div>
         <mat-card>
           <mat-card-subtitle>描述
             <mat-spinner *ngIf="rendered.loading | async" class="loading" [diameter]="14"></mat-spinner>
           </mat-card-subtitle>
-          <mat-card-content [innerHtml]="rendered.intro | async | mark: '': true"></mat-card-content>
+          <mat-card-content class="md-container" [innerHtml]="rendered.intro | async | mark: '': true"></mat-card-content>
         </mat-card>
         <mat-card>
           <mat-card-subtitle>外部链接
             <mat-spinner *ngIf="rendered.loading | async" class="loading" [diameter]="14"></mat-spinner>
           </mat-card-subtitle>
-          <mat-card-content [innerHtml]="rendered.links | async | mark: '': true"></mat-card-content>
+          <mat-card-content class="md-container" [innerHtml]="rendered.links | async | mark: '': true"></mat-card-content>
         </mat-card>
       </div>
     </section>
