--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -36,7 +36,16 @@
     <table mat-table [dataSource]="pagedTags" aria-label="Elements" matSort [matSortActive]="sortBy | async"
       [matSortDirection]="sortDirection | async"
       (matSortChange)="navigateParam({ sortBy: $event.active, sortDirection: $event.direction })">
-      <!-- Id Column -->
+      
+      <ng-container matColumnDef="namespace">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header class="text">命名空间</th>
+        <td mat-cell *matCellDef="let row">
+          <div>
+            <a (click)="setNs(row.namespace)" [routerLink]="[ '/list', row.namespace ]">{{row.namespace}}</a>
+          </div>
+        </td>
+      </ng-container>
+
       <ng-container matColumnDef="raw">
         <th mat-header-cell *matHeaderCellDef mat-sort-header class="text">原始标签</th>
         <td mat-cell *matCellDef="let row">
@@ -53,30 +62,21 @@
       <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef mat-sort-header class="text">名称</th>
         <td mat-cell *matCellDef="let row">
-          <div [innerHTML]="row.renderedName | mark: (search | async): true"></div>
+          <div class="md-container" [innerHTML]="row.renderedName | mark: (search | async): true"></div>
         </td>
       </ng-container>
 
       <ng-container matColumnDef="intro">
         <th mat-header-cell *matHeaderCellDef mat-sort-header class="text">描述</th>
         <td mat-cell *matCellDef="let row">
-          <div [innerHTML]="row.renderedIntro | mark: (search | async): true"></div>
-        </td>
-      </ng-container>
-
-      <ng-container matColumnDef="namespace">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header class="text">命名空间</th>
-        <td mat-cell *matCellDef="let row">
-          <div>
-            <a (click)="setNs(row.namespace)" [routerLink]="[ '/list', row.namespace ]">{{row.namespace}}</a>
-          </div>
+          <div class="md-container" [innerHTML]="row.renderedIntro | mark: (search | async): true"></div>
         </td>
       </ng-container>
 
       <ng-container matColumnDef="links">
         <th mat-header-cell *matHeaderCellDef mat-sort-header class="text">外部链接</th>
         <td mat-cell *matCellDef="let row">
-          <div [innerHTML]="row.renderedLinks | mark: (search | async): true"></div>
+          <div class="md-container" [innerHTML]="row.renderedLinks | mark: (search | async): true"></div>
         </td>
       </ng-container>
 
