--- a/src/app/editor/editor.component.html
+++ b/src/app/editor/editor.component.html
@@ -9,7 +9,12 @@
         <mat-icon>help</mat-icon>
       </a>
       <span style="flex: 1 1 auto;"></span>
-      <button mat-raised-button (click)="preview()">
+      <button class="narrow" mat-raised-button (click)="narrowPreviewing 
+        ? (narrowPreviewing = false)
+        : (preview() && (narrowPreviewing = true))">
+        {{ narrowPreviewing ? '编辑' : '预览' }}
+      </button>
+      <button class="wide" mat-raised-button (click)="preview() && (narrowPreviewing = false)">
         <ng-container *ngIf="!(rendered.loading | async); else renderingspinner">预览</ng-container>
         <ng-template #renderingspinner>
           <mat-spinner class="loading" [diameter]="24"></mat-spinner>
@@ -24,7 +29,7 @@
         </ng-template>
       </button>
     </header>
-    <section>
+    <section [@slide]="narrowPreviewing ? 'right' : 'left'">
       <div id="form-container">
         <form [formGroup]="tagForm" autocomplete="off">
           <mat-form-field>
@@ -87,20 +92,23 @@
             <mat-card-subtitle>名称
               <mat-spinner *ngIf="rendered.loading | async" class="loading" [diameter]="14"></mat-spinner>
             </mat-card-subtitle>
-            <mat-card-content class="md-container" [innerHtml]="rendered.name | async | mark: '': true"></mat-card-content>
+            <mat-card-content class="md-container" [innerHtml]="rendered.name | async | mark: '': true">
+            </mat-card-content>
           </mat-card>
         </div>
         <mat-card>
           <mat-card-subtitle>描述
             <mat-spinner *ngIf="rendered.loading | async" class="loading" [diameter]="14"></mat-spinner>
           </mat-card-subtitle>
-          <mat-card-content class="md-container" [innerHtml]="rendered.intro | async | mark: '': true"></mat-card-content>
+          <mat-card-content class="md-container" [innerHtml]="rendered.intro | async | mark: '': true">
+          </mat-card-content>
         </mat-card>
         <mat-card>
           <mat-card-subtitle>外部链接
             <mat-spinner *ngIf="rendered.loading | async" class="loading" [diameter]="14"></mat-spinner>
           </mat-card-subtitle>
-          <mat-card-content class="md-container" [innerHtml]="rendered.links | async | mark: '': true"></mat-card-content>
+          <mat-card-content class="md-container" [innerHtml]="rendered.links | async | mark: '': true">
+          </mat-card-content>
         </mat-card>
       </div>
     </section>
