--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <mat-toolbar color="accent" role="heading" class="mat-elevation-z8">
+  <app-github-corner href="https://github.com/EhTagTranslation/Editor" target="_blank"></app-github-corner>
   <a id="title" [routerLink]="['/']">EhTag Editor</a>
   <span style="flex: 1 1 auto;"></span>
   <app-user></app-user>
