--- a/src/styles.sass
+++ b/src/styles.sass
@@ -5,19 +5,19 @@
 // Include the common styles for Angular Material. We include this here so that you only
 // have to load a single css file for Angular Material in your app.
 // Be sure that you only ever include this mixin once!
-@include mat-core()
+@include mat-core
 
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
-$candy-app-primary: mat-palette($mat-deep-purple);
-$candy-app-accent:  mat-palette($mat-purple, A700, A600, A900);
+$candy-app-primary: mat-palette($mat-deep-purple)
+$candy-app-accent:  mat-palette($mat-purple, A700, A600, A900)
 
 // The warn palette is optional (defaults to red).
-$candy-app-warn:    mat-palette($mat-red);
+$candy-app-warn:    mat-palette($mat-red)
 
 // Create the theme object (a Sass map containing all of the palettes).
-$candy-app-theme: mat-light-theme($candy-app-primary, $candy-app-accent, $candy-app-warn);
+$candy-app-theme: mat-light-theme($candy-app-primary, $candy-app-accent, $candy-app-warn)
 
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
@@ -28,8 +28,10 @@ $candy-app-theme: mat-light-theme($candy-app-primary, $candy-app-accent, $candy-
 
 @import 'iconfont.css'
 
+
 html
   font-family: "Noto Sans", Arial, Helvetica, "Noto Sans CJK SC", "Microsoft Yahei UI", sans-serif 
+
 body
   margin: 0
 
@@ -40,10 +42,12 @@ a
     text-decoration: underline
   &:hover
     color: mat-color(map-get($candy-app-theme, accent))
+
 img[ehimg]
   border: transparent solid
   max-width: 300px
   max-height: 200px
+
   &[nsfw]
     border: red solid
 
