add chinese for namespace

--- a/src/app/editor/editor.component.sass
+++ b/src/app/editor/editor.component.sass
@@ -6,7 +6,6 @@
     display: flex
     user-select: none
     margin: 18px 12px 0
-    font-size: 24px
     > *
       margin: auto 6px
   section
@@ -40,6 +39,19 @@
 button, mat-card-subtitle
   .loading
     display: inline-block
+
+.ns-option
+  &.mat-option
+    line-height: 1.5em !important
+  .ns-text
+  .ns-raw
+    float: right
+  .ns-intro
+    display: block
+    color: rgba(0, 0, 0, 0.54)
+    overflow: hidden
+    text-overflow: ellipsis
+
 
 .hide
   display: none !important
