--- a/src/app/editor/editor.component.html
+++ b/src/app/editor/editor.component.html
@@ -1,7 +1,7 @@
 <div class="page-box">
   <div id="root">
     <header>
-      <span>
+      <span class="mat-headline">
         {{ (create | async) ? '创建标签' : '修改标签' }}
       </span>
       <a mat-icon-button href="https://github.com/EhTagTranslation/Database/blob/master/CONTRIBUTING.md"
@@ -35,8 +35,12 @@
           <mat-form-field>
             <mat-label>命名空间</mat-label>
             <mat-select formControlName="namespace" required>
-              <mat-option *ngFor="let ns of nsOptions" [value]="ns">
-                {{ns}}
+              <mat-select-trigger class="ns-option">
+                <span class="ns-name">{{getNamespace(value('namespace')).name}}</span><span class="ns-raw">{{value('namespace')}}</span>
+              </mat-select-trigger>
+              <mat-option *ngFor="let ns of nsOptions" [value]="ns" class="ns-option">
+                <span class="ns-name">{{getNamespace(ns).name}}</span><span class="ns-raw">{{ns}}</span>
+                <span class="mat-caption ns-intro">{{getNamespace(ns).intro}}</span>
               </mat-option>
             </mat-select>
             <mat-hint>{{ enabled('namespace') ? '标签所在的命名空间' : '修改标签时无法更改此项' }}</mat-hint>
