--- a/src/styles.sass
+++ b/src/styles.sass
@@ -2,10 +2,14 @@
 @import '~@angular/material/theming'
 // Plus imports for other components in your app.
 
+$font-family: 'Roboto, "Noto Sans", Arial, Helvetica, "Noto Sans CJK SC", "Microsoft Yahei UI", sans-serif'
+
+$custom-typography: mat-typography-config($font-family: $font-family)
+
 // Include the common styles for Angular Material. We include this here so that you only
 // have to load a single css file for Angular Material in your app.
 // Be sure that you only ever include this mixin once!
-@include mat-core
+@include mat-core($custom-typography)
 
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
@@ -30,7 +34,7 @@ $candy-app-theme: mat-light-theme($candy-app-primary, $candy-app-accent, $candy-
 
 
 html
-  font-family: "Noto Sans", Arial, Helvetica, "Noto Sans CJK SC", "Microsoft Yahei UI", sans-serif 
+  font-family: #{$font-family}
 
 body
   margin: 0
