--- a/src/app/editor/editor.component.sass
+++ b/src/app/editor/editor.component.sass
@@ -41,6 +41,7 @@ button, mat-card-subtitle
     display: inline-block
 
 .ns-option
+  user-select: none
   &.mat-option
     line-height: 1.5em !important
   .ns-text
