--- a/src/app/editor/editor.component.html
+++ b/src/app/editor/editor.component.html
@@ -60,7 +60,7 @@
             <mat-error *ngIf="hasError('raw','pattern', [ 'minlength', 'required' ])">
               不能以空格开始或结束</mat-error>
             <mat-error *ngIf="hasError('raw', 'raw', [ 'pattern', 'minlength', 'required' ])">
-              只能包含字母、数字、空格、'.' 和 '-'</mat-error>
+              只能包含字母、数字、空格、‘.’ 和 ‘-’</mat-error>
           </mat-form-field>
           <mat-form-field class="markdown">
             <mat-label>名称</mat-label>
