--- a/src/app/editor/editor.component.html
+++ b/src/app/editor/editor.component.html
@@ -20,7 +20,7 @@
           <mat-spinner class="loading" [diameter]="24"></mat-spinner>
         </ng-template>
       </button>
-      <button mat-raised-button [disabled]="(tagForm.invalid && tagForm.touched) || !(github.tokenChange | async)"
+      <button mat-raised-button [disabled]="(tagForm.invalid) || !(github.tokenChange | async)"
         [matTooltip]="!(github.tokenChange | async) ? '请先登录' : tagForm.invalid ? '请检查填写的内容' : '' " (click)="submit()"
         (focus)="preSubmit()" (mouseenter)="preSubmit()" color="accent">
         <ng-container *ngIf="!(submitting | async); else submittingspinner">提交</ng-container>
@@ -90,7 +90,7 @@
         <div id="preview-row1">
           <mat-card>
             <mat-card-subtitle>原始标签</mat-card-subtitle>
-            <mat-card-content [innerHtml]="inputs.raw | async"></mat-card-content>
+            <mat-card-content style="white-space: pre-wrap" [innerHtml]="rendered.raw | async"></mat-card-content>
           </mat-card>
           <mat-card>
             <mat-card-subtitle>名称
