--- a/src/app/list/list.component.sass
+++ b/src/app/list/list.component.sass
@@ -33,5 +33,8 @@ section#table-wrapper
   div.spinner
     user-select: none
     padding: 120px
+    position: sticky
+    left: 0
+    pointer-events: none
     mat-spinner
       margin: auto
