--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -36,7 +36,7 @@
     <table mat-table [dataSource]="pagedTags" aria-label="Elements" matSort [matSortActive]="sortBy | async"
       [matSortDirection]="sortDirection | async"
       (matSortChange)="navigateParam({ sortBy: $event.active, sortDirection: $event.direction })">
-      
+
       <ng-container matColumnDef="namespace">
         <th mat-header-cell *matHeaderCellDef mat-sort-header class="text">命名空间</th>
         <td mat-cell *matCellDef="let row">
@@ -100,7 +100,7 @@
       <tr mat-header-row *matHeaderRowDef="displayedColumns | async"></tr>
       <tr mat-row *matRowDef="let row; columns: (displayedColumns | async);"></tr>
     </table>
-    <div class="spinner" *ngIf="loading">
+    <div class="spinner" *ngIf="loading | async">
       <mat-spinner></mat-spinner>
     </div>
   </section>
