--- a/src/app/list/list.component.sass
+++ b/src/app/list/list.component.sass
@@ -4,14 +4,11 @@ header
   font-size: 14px
   display: flex
   flex-wrap: wrap
-  padding: 0 12px
-  > mat-form-field, mat-paginator
-    margin: 16px 12px -16px 12px
-  > mat-paginator
-    margin-left: 0
+  padding: 16px 16px 0
+  > mat-form-field
+    margin: 0 8px
   > mat-chip-list
-    margin: auto 12px
-    padding-top: 12px
+    margin: 6px 8px
   #search
     .mat-hint
       display: inline-block
