--- a/src/app/editor/editor.component.html
+++ b/src/app/editor/editor.component.html
@@ -4,7 +4,7 @@
       <span class="mat-headline">
         {{ (create | async) ? '创建标签' : '修改标签' }}
       </span>
-      <a mat-icon-button href="https://github.com/EhTagTranslation/Database/blob/master/CONTRIBUTING.md"
+      <a mat-icon-button href="https://github.com/EhTagTranslation/Database/wiki/参与翻译"
         matTooltip="查看参与翻译指南" target="_blank">
         <mat-icon>help</mat-icon>
       </a>
