fix referrer, improve copy paste

--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -5,7 +5,7 @@
         <mat-icon matPrefix>search</mat-icon>搜索
       </mat-label>
       <input [ngModel]="search | async" (ngModelChange)="navigateParam({search: $event, pageIndex: 0})" matInput
-        placeholder="string or /regex/" type="search" autocomplete="off">
+        placeholder="string or /regex/" type="search" autocomplete="off" (paste)="pasting($event)">
       <span *ngIf="(usingRegex | async) && (search | async)" matSuffix class="mat-hint" matTooltip="正在使用正则表达式进行匹配"
         matTooltipPosition="above">.*</span>
       <span *ngIf="!(usingRegex | async) && (search | async)" matSuffix class="mat-hint" matTooltip="正在使用普通文本进行匹配"
@@ -85,8 +85,7 @@
           <button [disabled]="editableNs.indexOf(row.namespace) < 0"
             [matTooltip]="(editableNs.indexOf(row.namespace) < 0) ? '该命名空间的标签暂不支持从此处修改，请提交 ISSUE 讨论或通过 PR 修改' : '编辑'"
             matTooltipPosition="right" matTooltipShowDelay="500" mat-icon-button class="mat-accent"
-            [routerLink]="[ '/edit', row.namespace, row.raw ]"
-            [queryParams]="{ name: row.name, intro: row.intro, links: row.links }">
+            [routerLink]="[ '/edit', row.namespace, row.raw ]">
             <mat-icon>edit</mat-icon>
           </button>
         </td>
