--- a/src/app/list/list.component.sass
+++ b/src/app/list/list.component.sass
@@ -25,11 +25,10 @@ section#table-wrapper
       min-width: 80px
     .mat-header-cell:not(:last-child), .mat-cell:not(:last-child)
       padding-right: 8px
+    tr
+      user-select: text
     td > div
       margin: 4px 0
-      /deep/ 
-        > span, > a, > p
-          user-select: text
 
   div.spinner
     padding: 120px
