--- a/src/app/editor/editor.component.html
+++ b/src/app/editor/editor.component.html
@@ -52,7 +52,7 @@
           </mat-form-field>
           <mat-form-field>
             <mat-label>原始标签</mat-label>
-            <input matInput formControlName="raw" required />
+            <input matInput formControlName="raw" required (paste)="pasting($event, false)"/>
             <mat-hint>{{ enabled('raw') ? '输入原始的标签内容' : '修改标签时无法更改此项' }}</mat-hint>
             <mat-error *ngIf="hasError('raw', 'required')">必须填写</mat-error>
             <mat-error *ngIf="hasError('raw', 'minlength', 'required')">至少包含两个字母
@@ -64,18 +64,18 @@
           </mat-form-field>
           <mat-form-field class="markdown">
             <mat-label>名称</mat-label>
-            <input matInput formControlName="name" required>
+            <input matInput formControlName="name" required (paste)="pasting($event, true)">
             <mat-hint>输入标签的中文翻译</mat-hint>
             <mat-error *ngIf="hasError('name', [ 'pattern', 'required' ])">必须填写</mat-error>
           </mat-form-field>
           <mat-form-field class="markdown">
             <mat-label>描述</mat-label>
-            <textarea matInput formControlName="intro" cdkTextareaAutosize cdkAutosizeMinRows="2"></textarea>
+            <textarea matInput formControlName="intro" cdkTextareaAutosize cdkAutosizeMinRows="2" (paste)="pasting($event, true)"></textarea>
             <mat-hint>输入标签的描述</mat-hint>
           </mat-form-field>
           <mat-form-field class="markdown">
             <mat-label>外部链接</mat-label>
-            <textarea matInput formControlName="links" cdkTextareaAutosize cdkAutosizeMinRows="2"></textarea>
+            <textarea matInput formControlName="links" cdkTextareaAutosize cdkAutosizeMinRows="2" (paste)="pasting($event, true)"></textarea>
             <mat-hint>输入标签的相关链接，如指向{{
                 (((inputs.namespace | async ) || (original.namespace | async)) === 'artist') ? '画师的微博和 pixiv ' 
               : (((inputs.namespace | async ) || (original.namespace | async)) === 'group') ? '社团或公司的官方网站'
